<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usernameEntryBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/care_corner_logo"
        app:layout_constraintStart_toStartOf="@+id/care_corner_logo"
        app:layout_constraintTop_toBottomOf="@+id/care_corner_logo"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEntryBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEntryBox"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/passwordEntryBox"
        app:layout_constraintStart_toStartOf="@+id/passwordEntryBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordEntryBox" />

    <ImageView
        android:id="@+id/care_corner_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnForgotUsername"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/forgot_username"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/btnForgotUsername"
        app:layout_constraintStart_toStartOf="@+id/btnForgotUsername"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>