<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallingActivity">

    <TextView
        android:id="@+id/incoming_call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/incoming_call"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/CallerImageView"
        android:layout_width="101dp"
        android:layout_height="113dp"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incoming_call_text"
        app:srcCompat="@drawable/default_caller_image" />

    <TextView
        android:id="@+id/caller_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/caller_id"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CallerImageView" />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mobile"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caller_id_text" />

    <ImageButton
        android:id="@+id/btnAcceptCall"
        android:layout_width="114dp"
        android:layout_height="85dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="80dp"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_text"
        app:srcCompat="@drawable/accept_call_button" />

    <ImageButton
        android:id="@+id/btnRejectCall"
        android:layout_width="106dp"
        android:layout_height="79dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="35dp"
        android:background="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_text"
        app:srcCompat="@drawable/reject_call_button" />

    <TextView
        android:id="@+id/send_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:paddingLeft="60dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/send_message"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>