<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MombotActivity">

    <ImageView
        android:id="@+id/mombotLogo"
        android:layout_width="124dp"
        android:layout_height="86dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/mombot"
        app:layout_constraintBottom_toTopOf="@+id/MombotEntryBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Mombot"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mom_bot_icon" />

    <EditText
        android:id="@+id/mombotResponseBox"
        android:layout_width="0dp"
        android:layout_height="228dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="63dp"
        android:gravity="top|start"
        android:hint="@string/mombot_response"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/MombotEntryBox"
        android:layout_width="249dp"
        android:layout_height="228dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:gravity="top|start"
        android:hint="@string/entry_for_mombot"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mombot"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="5dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/mombotResponseBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MombotEntryBox" />

    <TextView
        android:id="@+id/Mombot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mombot"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>